# swagger-output.json
@@ -80,6 +80,11 @@
         "requestBody": {
           "required": true,
           "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/RegistroBody"
+              }
+            },
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/RegistroBody"
@@ -147,6 +152,11 @@
         "requestBody": {
           "required": true,
           "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginBody"
+              }
+            },
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/LoginBody"
@@ -263,6 +273,11 @@
         "requestBody": {
           "required": true,
           "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/PerfilBody"
+              }
+            },
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/PerfilBody"
@@ -356,6 +371,11 @@
         "requestBody": {
           "required": true,
           "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/PublicacionBody"
+              }
+            },
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/PublicacionBody"
